--- a/app/views/dashbord/index.html.erb
+++ b/app/views/dashbord/index.html.erb
@@ -37,7 +37,7 @@
     </div>
     
     <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-default">
-    <%=image_tag ("lap.svg") %>
+    <%=image_tag ("testing.svg"), width: "680"  %>
     </div>
 
 </div>
