--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -7,34 +7,24 @@
 
 <div class="uk-container-expand uk-background-default">
     <div class="uk-container" >
-    <div class="uk-padding-small uk-padding-remove-bottom "  uk-grid>
-        <div class="uk-text-right uk-width-expand">
-            <h1 class="uk-h2"><%= @episode.title %></h1>
-        </div>
-        <div class="uk-text-left uk-width-1-3 uk-inline">
-            <div class="uk-width-1-2">
-
-                    <div class="uk-padding-remove-bottom uk-text-left" id="like_<%= @episode.slug %>_likes">
-                        <div class="uk-position-center">
-                                <%= render partial: "likes", locals: {episode: @episode} %>
-                        </div>
-                        
-                    </div>  
-                                        
-                    <div class="uk-position-left">
-                        <div    class="fb-share-button uk-margin-right"
-                            data-href="<%= +request.fullpath %>"
-                            data-layout="button" 
-                            data-size="small">
-                        </div>
-                        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="small" data-hashtags="cg anatomy" data-show-count="false"></a>
-                    </div>
-
-
-                
+        <div class="uk-padding-small uk-padding-remove-bottom "  uk-grid>
+            <div class="uk-text-right uk-width-expand">
+                <h1 class="uk-h2"><%= @episode.title %></h1>
             </div>
+            <div class="uk-padding-remove-bottom uk-width-auto" id="like_<%= @episode.slug %>_likes">
+                <%= render partial: "likes", locals: {episode: @episode} %>
+            </div>  
+                                            
+            <div class="uk-text-left uk-width-auto">
+                <div class="fb-share-button uk-margin-right"
+                    data-href="<%= +request.fullpath %>"
+                    data-layout="button" 
+                    data-size="small">
+                </div>
+                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="small" data-hashtags="cg anatomy" data-show-count="false"></a>
+            </div>
+
         </div>
-    </div>
     </div>
     <hr>
 </div>
