--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,26 +1,31 @@
+<nav class="uk-navbar-container  uk-navbar-transparent cg-dark-sc uk-light nav" dir="ltr" >
+  <div class="uk-container uk-padding">
+    <div class="uk-navbar" uk-navbar="mode: click">
 
-<div class="cg-dark-sc uk-section-small nav">
-    <div class="uk-container">
-        <div class="uk-grid-match uk-child-width-1-2" uk-grid>
-            <div>
-                <ul class="uk-switcher">
-                    <li class="uk-active">
-                        <span><%=image_tag("icons/facebook.svg")%></span>
-                        <span><%=image_tag("icons/twitter.svg")%></span>
-                        <span><%=image_tag("icons/youtube.svg")%></span>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                 <ul class="uk-list uk-text-left">
-                    <li>2020 CGAnatomy, All Rights Reserved</li>
+            <div class="uk-navbar-left">
+
+                <ul class="uk-navbar-nav">            
+                    <li>2020 CGAnatomy, All Rights Reserved</li>                    
                     <% if user_signed_in? && (current_user.has_role? :admin) %>
-                        <li class="uk-active"><%= link_to 'Admin', rails_admin_path%></li> 
-                        <li class="uk-active"><%= link_to 'Feeds', activities_path%></li> 
+                    <li><%= link_to 'Admin', rails_admin_path%></li>
+                    <li><%= link_to 'Feeds', activities_path%></li>
                     <% end %>
-                </ul>                
-            </div>
-        </div>
+                </ul>
 
+            </div>
+
+            <div class="uk-navbar-right">
+
+                <ul class="uk-navbar-nav">
+                    <li><%=image_tag("icons/twitter.svg")%></li>
+                    <li><%=image_tag("icons/youtube.svg")%></li>            
+                    <li><%=image_tag("icons/facebook.svg")%></li>
+                </ul>
+
+            </div>
+
+        </nav>
     </div>
 </div>
+
+
